fix: remove webmvc to use webflux exclusively